adjusted styling for laptop sized screens

--- a/index.html
+++ b/index.html
@@ -242,17 +242,17 @@
 
                                 <h3>Tools</h3>
                                 <ul>
-                                    <li>- JavaScript</li>
-                                    <li>- MongoDB</li>
-                                    <li>- firebase</li>
+                                    <li>JavaScript</li>
+                                    <li>MongoDB</li>
+                                    <li>firebase</li>
 
                                 </ul>
                             </div>
                             <div class="project__card__meta__links mt-s">
                                 <h3>Links</h3>
                                 <ul>
-                                    <li>- Repo <i class="fa-brands fa-github"></i></li>
-                                    <li>- Live Demo <i class="fa-solid fa-desktop"></i></li>
+                                    <li>Repo <i class="fa-brands fa-github"></i></li>
+                                    <li>Live Demo <i class="fa-solid fa-desktop"></i></li>
                                 </ul>
                             </div>
                         </div>
