fixed padding for hero element on phones. and added repo and demo links for other project cards

--- a/index.html
+++ b/index.html
@@ -217,17 +217,6 @@
                     <span class="about-me__heading__cat--title">Projects</span>
                 </div>
             </header>
-            <ul class="projects__tab mt-s">
-                <li class="projects__tab__item projects__tab__item--1 projects__tab__item--active">
-                    1
-                </li>
-                <li class="projects__tab__item projects__tab__item--2">
-                    2
-                </li>
-                <li class="projects__tab__item projects__tab__item--3">
-                    3
-                </li>
-            </ul>
             <!-- Slideshow container -->
             <div class="slideshow-container">
                 <div class="slideshow-container__slideshow">
@@ -266,11 +255,18 @@
                         <div class="project__card__meta">
                             <h3>Tools</h3>
                             <ul>
-                                <li>- JavaScript</li>
-                                <li>- MongoDB</li>
-                                <li>- firebase</li>
+                                <li> JavaScript</li>
+                                <li> MongoDB</li>
+                                <li> firebase</li>
 
                             </ul>
+                            <div class="project__card__meta__links mt-s">
+                                <h3>Links</h3>
+                                <ul>
+                                    <li>Repo <i class="fa-brands fa-github"></i></li>
+                                    <li>Live Demo <i class="fa-solid fa-desktop"></i></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="project__card">
@@ -282,16 +278,34 @@
                         <div class="project__card__meta">
                             <h3>Tools</h3>
                             <ul>
-                                <li>- JavaScript</li>
-                                <li>- MongoDB</li>
-                                <li>- firebase</li>
+                                <li> JavaScript</li>
+                                <li> MongoDB</li>
+                                <li> firebase</li>
 
                             </ul>
+                            <div class="project__card__meta__links mt-s">
+                                <h3>Links</h3>
+                                <ul>
+                                    <li>Repo <i class="fa-brands fa-github"></i></li>
+                                    <li>Live Demo <i class="fa-solid fa-desktop"></i></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
                 </div>
             </div>
+            <ul class="projects__tab ">
+                <li class="projects__tab__item projects__tab__item--1 projects__tab__item--active">
+                    1
+                </li>
+                <li class="projects__tab__item projects__tab__item--2">
+                    2
+                </li>
+                <li class="projects__tab__item projects__tab__item--3">
+                    3
+                </li>
+            </ul>
 
         </section>
 
