--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     </nav>
 
     <main>
-        <section class="hero mt-m " id="hero-section">
+        <section class="hero mt-l " id="hero-section">
             <div class="hero__img-container">
-                <img src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png" alt="">
+                <img src="/assets/me.jpg" alt="">
                 <span class="hero__img-container--title mt-s">Web Developer</span>
             </div>
             <div class="hero__content mt-s">
