added codedoc project img

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="project__card">
                         <div class="project__card__img__container">
                             <h2>CodeDoc</h2>
-                            <img src="https://veedahv.me/images/blog-app.jpg" alt="">
+                            <img src="assets/code-doc.png" alt="">
 
                         </div>
                         <div class="project__card__meta">
@@ -249,7 +249,7 @@
                     <div class="project__card">
                         <div class="project__card__img__container">
                             <h2>CodeDoc</h2>
-                            <img src="https://veedahv.me/images/blog-app.jpg" alt="">
+                            <img src="assets/code-doc.png" alt="">
 
                         </div>
                         <div class="project__card__meta">
@@ -272,7 +272,7 @@
                     <div class="project__card">
                         <div class="project__card__img__container">
                             <h2>CodeDoc</h2>
-                            <img src="https://veedahv.me/images/blog-app.jpg" alt="">
+                            <img src="assets/code-doc.png" alt="">
 
                         </div>
                         <div class="project__card__meta">
