added my projects and links

--- a/index.html
+++ b/index.html
@@ -217,84 +217,6 @@
                     <span class="about-me__heading__cat--title">Projects</span>
                 </div>
             </header>
-            <!-- Slideshow container -->
-            <div class="slideshow-container">
-                <div class="slideshow-container__slideshow">
-                    <div class="project__card">
-                        <div class="project__card__img__container">
-                            <h2>CodeDoc</h2>
-                            <img src="assets/code-doc.png" alt="">
-
-                        </div>
-                        <div class="project__card__meta">
-                            <div class="project__card__meta__tools">
-
-                                <h3>Tools</h3>
-                                <ul>
-                                    <li>JavaScript</li>
-                                    <li>MongoDB</li>
-                                    <li>firebase</li>
-
-                                </ul>
-                            </div>
-                            <div class="project__card__meta__links mt-s">
-                                <h3>Links</h3>
-                                <ul>
-                                    <li>Repo <i class="fa-brands fa-github"></i></li>
-                                    <li>Live Demo <i class="fa-solid fa-desktop"></i></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project__card">
-                        <div class="project__card__img__container">
-                            <h2>CodeDoc</h2>
-                            <img src="assets/code-doc.png" alt="">
-
-                        </div>
-                        <div class="project__card__meta">
-                            <h3>Tools</h3>
-                            <ul>
-                                <li> JavaScript</li>
-                                <li> MongoDB</li>
-                                <li> firebase</li>
-
-                            </ul>
-                            <div class="project__card__meta__links mt-s">
-                                <h3>Links</h3>
-                                <ul>
-                                    <li>Repo <i class="fa-brands fa-github"></i></li>
-                                    <li>Live Demo <i class="fa-solid fa-desktop"></i></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project__card">
-                        <div class="project__card__img__container">
-                            <h2>CodeDoc</h2>
-                            <img src="assets/code-doc.png" alt="">
-
-                        </div>
-                        <div class="project__card__meta">
-                            <h3>Tools</h3>
-                            <ul>
-                                <li> JavaScript</li>
-                                <li> MongoDB</li>
-                                <li> firebase</li>
-
-                            </ul>
-                            <div class="project__card__meta__links mt-s">
-                                <h3>Links</h3>
-                                <ul>
-                                    <li>Repo <i class="fa-brands fa-github"></i></li>
-                                    <li>Live Demo <i class="fa-solid fa-desktop"></i></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
             <ul class="projects__tab ">
                 <li class="projects__tab__item projects__tab__item--1 projects__tab__item--active">
                     1
@@ -306,6 +228,99 @@
                     3
                 </li>
             </ul>
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+                <div class="slideshow-container__slideshow">
+                    <div class="project__card">
+                        <div class="project__card__img__container">
+                            <h2>CodeDoc</h2>
+                            <a href="https://adoring-meitner-4b38b9.netlify.app/">
+
+                                <img src="assets/code-doc.png" alt="">
+                            </a>
+
+                        </div>
+                        <div class="project__card__meta">
+                            <div class="project__card__meta__tools">
+
+                                <h3>Tools</h3>
+                                <ul>
+                                    <li>React.js</li>
+                                    <li>AWS</li>
+                                    <li>NPM</li>
+
+                                </ul>
+                            </div>
+                            <div class="project__card__meta__links mt-s">
+                                <h3>Links</h3>
+                                <ul>
+                                    <li> <a href="https://github.com/jmurphy1196/codedoc">Repo <i
+                                                class="fa-brands fa-github"></i></a> </li>
+                                    <li> <a href="https://adoring-meitner-4b38b9.netlify.app/">Live Demo <i
+                                                class="fa-solid fa-desktop"></i></a> </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project__card">
+                        <div class="project__card__img__container">
+                            <h2>Clips</h2>
+                            <a href="https://clips-six.vercel.app/">
+                                <img src="assets/clips.png" alt="">
+
+                            </a>
+
+                        </div>
+                        <div class="project__card__meta">
+                            <h3>Tools</h3>
+                            <ul>
+                                <li>Angular</li>
+                                <li>Firebase</li>
+                                <li>Web Assembly</li>
+
+                            </ul>
+                            <div class="project__card__meta__links mt-s">
+                                <h3>Links</h3>
+                                <ul>
+                                    <li> <a href="https://github.com/jmurphy1196/clips">Repo <i
+                                                class="fa-brands fa-github"></i></a> </li>
+                                    <li> <a href="https://clips-six.vercel.app/">Live Demo <i
+                                                class="fa-solid fa-desktop"></i></a> </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project__card">
+                        <div class="project__card__img__container">
+                            <h2>Sound off</h2>
+                            <a href="https://silly-goldberg-49d4fb.netlify.app/">
+                                <img src="assets/sound-off.png" alt="">
+
+                            </a>
+
+                        </div>
+                        <div class="project__card__meta">
+                            <h3>Tools</h3>
+                            <ul>
+                                <li>React.js</li>
+                                <li>Firebase</li>
+                                <li>Serverless functions</li>
+
+                            </ul>
+                            <div class="project__card__meta__links mt-s">
+                                <h3>Links</h3>
+                                <ul>
+                                    <li> <a href="https://github.com/jmurphy1196/sound-off-client">Repo <i
+                                                class="fa-brands fa-github"></i></a> </li>
+                                    <li> <a href="https://silly-goldberg-49d4fb.netlify.app/">Live Demo <i
+                                                class="fa-solid fa-desktop"></i></a> </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
 
         </section>
 
