added text to about me section

--- a/index.html
+++ b/index.html
@@ -88,15 +88,19 @@
             <div class="about-me__content mt-l">
                 <div class="about-me__content--left">
                     <span class="about-me__content--title">More about me</span>
-                    <span class="about-me__content--text mt-s">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Laudantium exercitationem necessitatibus ad et quisquam nam praesentium modi dolore amet totam.
-                        Sit
+                    <span class="about-me__content--text mt-s">
+                        My name is Jason Murphy. I am a front-end web developer who replicates
+                        designs using various front-end technologies
                         <br>
                         <br>
-                        vero eaque, iste eius cupiditate rerum culpa a nostrum. Lorem ipsum, dolor sit amet consectetur
-                        adipisicing elit. Modi sapiente ullam minus laborum molestias, cupiditate natus ipsum eius
-                        facere
-                        distinctio quas molestiae, ad necessitatibus doloremque et sunt a facilis itaque?</span>
+                        Currently, I am building new projects, studying python, and cloud technologies such as AWS. I
+                        love solving
+                        problems and learning new technologies.
+                        <br>
+                        <br>
+                        While not coding or learning, I enjoy watching tv (probably star trek), playing games (probably halo),
+                        and also spending time with friends and family.
+                    </span>
                     <a href="#" class="about-me__content__cta mt-m">Visit my blog <i
                             class="fa-solid fa-arrow-right-long"></i></a>
 
