fixed type in hero content

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <span class="hero__content__title">Hello, I'm Jason!</span>
                 <span class="hero__content__text mt-s">I use HTML, CSS & javascript to bring designs to life. I
                     specialize
-                    in creating clean, fast and accessible websites using appropriate fonrt-end technologies and
+                    in creating clean, fast and accessible websites using appropriate front-end technologies and
                     techniques</span>
             </div>
             <div class="hero__cta mt-s">
