replaced hire me button with github button

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                     <i class="fa-solid fa-download"></i>
                     <span>Resume</span>
                 </button>
-                <button>
-                    <i class="fa-solid fa-thumbs-up"></i>
-                    <span>Hire Me</span>
-                </button>
+                <a href="https://github.com/jmurphy1196">
+                    <i class="fa-brands fa-github"></i>
+                    <span> Github </span>
+                </a>
             </div>
         </section>
         <section class="about-me" id="about-me-section">
