--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     techniques</span>
             </div>
             <div class="hero__cta mt-s">
-                <button>
+                <a href="/assets/jason_murphy-Web_Developer.pdf"> 
                     <i class="fa-solid fa-download"></i>
                     <span>Resume</span>
-                </button>
+                </a>
                 <a href="https://github.com/jmurphy1196">
                     <i class="fa-brands fa-github"></i>
                     <span> Github </span>
