added form submit button and binding form input to formdata variable

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </div>
                 <div class="contact-me__form__group">
                     <label for="email" class="contact-me__form__label">Your email</label>
-                    <input name="email" type="email" class="contact-me__form__input">
+                    <input name="email" type="email" class="contact-me__form__input" required>
 
                 </div>
                 <div class="contact-me__form__group">
@@ -363,6 +363,11 @@
                     <textarea name="body" id="" cols="30" rows="10" class="contact-me__form__area"></textarea>
 
                 </div>
+                <div class="contact-me__form__group">
+
+                <button type="submit">Submit</button>
+                </div>
+
             </form>
 
         </section>
