added sending contact info functionality hits a lambda endpoint that sends an email

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </div>
                 <div class="contact-me__form__group">
 
-                <button type="submit">Submit</button>
+                <button type="submit" id="contact-me-submit-btn">Submit</button>
                 </div>
 
             </form>
