added desc for each project

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     techniques</span>
             </div>
             <div class="hero__cta mt-s">
-                <a href="/assets/jason_murphy-Web_Developer.pdf"> 
+                <a href="/assets/jason_murphy-Web_Developer.pdf">
                     <i class="fa-solid fa-download"></i>
                     <span>Resume</span>
                 </a>
@@ -100,7 +100,8 @@
                         problems and learning new technologies.
                         <br>
                         <br>
-                        While not coding or learning, I enjoy watching tv (probably star trek), playing games (probably halo),
+                        While not coding or learning, I enjoy watching tv (probably star trek), playing games (probably
+                        halo),
                         and also spending time with friends and family.
                     </span>
                     <a href="#" class="about-me__content__cta mt-m">Visit my blog <i
@@ -247,6 +248,12 @@
 
                         </div>
                         <div class="project__card__meta">
+                            <h3>Description</h3>
+                            <span>
+
+                                a code documentation platform. Users can write their javascript in the browser and
+                                import npm packages. Then save and share their code snippets
+                            </span>
                             <div class="project__card__meta__tools">
 
                                 <h3>Tools</h3>
@@ -278,6 +285,14 @@
 
                         </div>
                         <div class="project__card__meta">
+                            <h3>Description</h3>
+                            <span>
+                                This is a video sharing web application. Users can upload short 25 second clips and
+                                share them with their friends. The project uses some web assembly under the hood for
+                                video processing and generating potential thumbails.
+
+
+                            </span>
                             <h3>Tools</h3>
                             <ul>
                                 <li>Angular</li>
@@ -306,6 +321,13 @@
 
                         </div>
                         <div class="project__card__meta">
+                            <h3>Description</h3>
+                            <span>
+                                This is a social media web application. Users can create a user handle for themselves,
+                                like posts, comment, and create posts. It also supports customizing your profile with
+                                pictures and bios.
+
+                            </span>
                             <h3>Tools</h3>
                             <ul>
                                 <li>React.js</li>
@@ -365,7 +387,7 @@
                 </div>
                 <div class="contact-me__form__group">
 
-                <button type="submit" id="contact-me-submit-btn">Submit</button>
+                    <button type="submit" id="contact-me-submit-btn">Submit</button>
                 </div>
 
             </form>
